--- a/package.json
+++ b/package.json
@@ -9,8 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@nestjs/common": "^10.3.8",
+    "@prisma/client": "^5.13.0",
+    "mongodb": "^6.6.1",
     "next": "14.2.3",
     "next-auth": "^4.24.7",
+    "next-connect": "^1.0.0",
     "react": "^18",
     "react-dom": "^18"
   },
